# AgentLightening-Practice

./: .dockerignore  .gitignore  Dockerfile  FINAL_SUMMARY.md  PROGRESS.md  README.ko.md  README.md  README.new.md  REFACTORING_PLAN.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  fetcher.py  presenter.py  summarizer.py
config/: config.yaml
src/paper_review/: __init__.py
src/paper_review/agents/: __init__.py  base.py  ranker.py  summarizer.py
src/paper_review/agents/fetcher/: __init__.py  arxiv.py  huggingface.py
src/paper_review/core/: __init__.py  config.py  pipeline.py
src/paper_review/models/: __init__.py  filters.py  paper.py  summary.py
src/paper_review/utils/: __init__.py  arxiv.py  image.py  llm.py  pdf.py
src/paper_review/web/: __init__.py  app.py
templates/: summary_report.html
templates/web/: base.html  index.html  papers.html
utils/: __init__.py  agent_lightning_tracker.py  arxiv_client.py  config_loader.py  image_extractor.py  novelty_ranker.py  ollama_multimodal.py  pdf_processor.py
